--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="fas fa-mobile-alt fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Feeeling App Service</h3>
                             <p class="text-muted mb-0">앱을 통한 그림 심리 검사를 받을 수 있는 필링 앱 서비스</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="fas fa-desktop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Feeeling Online Service</h3>
                             <p class="text-muted mb-0">온라인으로 그림 심리 검사와 상담을 받을 수 있는 필링 온라인 플랫폼</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="fas fa-globe-asia fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Feeeling in Metaverse</h3>
                             <p class="text-muted mb-0">10대 이하 청소년들이 열광하는 메타버스로 서비스 확장</p>
                         </div>
@@ -100,7 +100,6 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="far fa-building fs-1 text-primary"></i></div>
-                            <i class="far fa-building fs-1 text-primary"></i>
                             <h3 class="h4 mb-2">Feeeling For Business</h3>
                             <p class="text-muted mb-0">심리 상담 비즈니스를 돕는 필링 비즈니스 플랫폼</p>
                         </div>
